feat. 增加vscode debugger設定、增加GetAllUsers。調整controller參數設定
